--- a/sdk/Managed/test/Microsoft.WindowsAzure.MobileServices.Test/Microsoft.WindowsAzure.Mobile.Test.csproj
+++ b/sdk/Managed/test/Microsoft.WindowsAzure.MobileServices.Test/Microsoft.WindowsAzure.Mobile.Test.csproj
@@ -44,6 +44,7 @@
     <None Include="packages.config" />
     <Compile Include="SerializationTypes\JObjectTypes.cs" />
     <Compile Include="SerializationTypes\TypeWithConstructor.cs" />
+    <Compile Include="UnitTests\Common\UriUtilities.cs" />
     <Compile Include="UnitTests\Http\HttpUtilityTests.cs" />
     <Compile Include="UnitTests\MobileAppUriValidator.cs" />
     <Compile Include="UnitTests\OData\ODataExpressionParser.Test.cs" />
